@@ -1,48 +1,43 @@
 package com.sistemaClinica.config;
 
+import java.util.Arrays;
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
+import com.sistemaClinica.usuario.service.JpaUserDetailsService;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import com.sistemaClinica.usuario.service.JpaUserDetailsService;
-
-import org.springframework.beans.factory.annotation.Value;
-import java.util.Arrays;
-import java.util.List;
-
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfig {
 
     private final JpaUserDetailsService jpaUserDetailsService;
     private final List<String> allowedOrigins;
-    private final List<String> allowedOriginPatterns;
 
     public SecurityConfig(
             JpaUserDetailsService jpaUserDetailsService,
-            @Value("${app.cors.allowed-origins:http://localhost:3000}") String allowedOriginsCsv,
-            @Value("${app.cors.allowed-origin-patterns:https://*.vercel.app}") String allowedOriginPatternsCsv
+            @Value("${app.cors.allowed-origins:http://localhost:3000}") String allowedOrigins
     ) {
         this.jpaUserDetailsService = jpaUserDetailsService;
-        this.allowedOrigins = Arrays.stream(allowedOriginsCsv.split(","))
+        this.allowedOrigins = Arrays.stream(allowedOrigins.split(","))
                 .map(String::trim)
-                .filter(s -> !s.isBlank())
-                .toList();
-        this.allowedOriginPatterns = Arrays.stream(allowedOriginPatternsCsv.split(","))
-                .map(String::trim)
-                .filter(s -> !s.isBlank())
+                .filter(origin -> !origin.isBlank())
                 .toList();
     }
 
@@ -61,32 +56,66 @@ public class SecurityConfig {
         http
                 .userDetailsService(jpaUserDetailsService)
                 .csrf(csrf -> csrf.disable())
+                .headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable()))
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
                 .authorizeHttpRequests(authorize -> authorize
+                        .requestMatchers(PathRequest.toStaticResources().atCommonLocations()).permitAll()
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        .requestMatchers("/api/auth/login", "/error").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/usuarios/registrar").hasRole("GERENTE")
-                        .anyRequest().authenticated())
-                .exceptionHandling(exception -> exception
+                        .requestMatchers(
+                                "/",
+                                "/index.html",
+                                "/favicon.ico",
+                                "/manifest.json",
+                                "/robots.txt",
+                                "/logo192.png",
+                                "/logo512.png",
+                                "/static/**",
+                                "/telaLogin",
+                                "/registrar",
+                                "/Home",
+                                "/pacientes/**",
+                                "/dentistas/**",
+                                "/funcionarios/**",
+                                "/agendamento/**",
+                                "/procedimentos/**",
+                                "/relatorios/**",
+                                "/consultas/**"
+                        ).permitAll()
+                        .requestMatchers("/telaLogin/login", "/api/usuarios/registrar", "/api/auth/login", "/api/auth/logout").permitAll()
+                        .requestMatchers("/h2-console/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/usuarios/me").authenticated()
+                        .requestMatchers("/api/**").authenticated()
+                        .anyRequest().authenticated()
+                )
+                .formLogin(form -> form
+                        .usernameParameter("nmEmail")
+                        .passwordParameter("nmSenha")
+                        .loginProcessingUrl("/telaLogin/login")
+                        .successHandler((request, response, authentication) -> response.setStatus(HttpStatus.OK.value()))
+                        .failureHandler((request, response, exception) -> response.sendError(HttpStatus.UNAUTHORIZED.value(), "Credenciais invalidas"))
+                        .permitAll()
+                )
+                .logout(logout -> logout
+                        .logoutUrl("/logout")
+                        .logoutSuccessHandler((request, response, authentication) -> response.setStatus(HttpStatus.NO_CONTENT.value()))
+                        .permitAll()
+                )
+                .exceptionHandling(exceptionHandling -> exceptionHandling
                         .authenticationEntryPoint((request, response, authException) ->
-                                response.sendError(401, "Nao autenticado"))
-                        .accessDeniedHandler((request, response, accessDeniedException) ->
-                                response.sendError(403, "Acesso negado")))
-                .formLogin(AbstractHttpConfigurer::disable)
-                .httpBasic(AbstractHttpConfigurer::disable)
-                .logout(AbstractHttpConfigurer::disable)
-                .requestCache(cache -> cache.disable());
+                                response.sendError(HttpStatus.UNAUTHORIZED.value(), "Nao autenticado"))
+                );
 
         return http.build();
     }
+
+
+
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(allowedOrigins);
-        configuration.setAllowedOriginPatterns(allowedOriginPatterns);
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
